--- a/syncupc_app/pubspec.yaml
+++ b/syncupc_app/pubspec.yaml
@@ -17,6 +17,9 @@ dependencies:
   riverpod_annotation: ^2.6.1
   flutter_native_splash: ^2.4.4
   flutter_launcher_icons: ^0.14.4
+  mobile_scanner: ^6.0.10
+  image_picker: ^1.1.0
+  flutter_localization: ^0.3.2
 
 dev_dependencies:
   flutter_test:
