--- a/syncupc_app/pubspec.yaml
+++ b/syncupc_app/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   mobile_scanner: ^6.0.10
   image_picker: ^1.1.0
   flutter_localization: ^0.3.2
+  http: ^1.4.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
