--- a/syncupc_app/pubspec.yaml
+++ b/syncupc_app/pubspec.yaml
@@ -20,8 +20,11 @@ dependencies:
   mobile_scanner: ^6.0.10
   image_picker: ^1.1.0
   flutter_localization: ^0.3.2
+  permission_handler: ^10.4.3
   http: ^1.4.0
   shared_preferences: ^2.5.3
+  supabase_flutter: ^2.9.1
+  mime: ^2.0.0
 
 dev_dependencies:
   flutter_test:
