--- a/syncupc_app/pubspec.yaml
+++ b/syncupc_app/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   shared_preferences: ^2.5.3
   supabase_flutter: ^2.9.1
   mime: ^2.0.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
