--- a/syncupc_app/pubspec.yaml
+++ b/syncupc_app/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   supabase_flutter: ^2.9.1
   mime: ^2.0.0
   intl: ^0.19.0
+  timeago: ^3.7.1
 
 dev_dependencies:
   flutter_test:
