--- a/syncupc_app/pubspec.yaml
+++ b/syncupc_app/pubspec.yaml
@@ -27,6 +27,9 @@ dependencies:
   mime: ^2.0.0
   intl: ^0.19.0
   timeago: ^3.7.1
+  qr_flutter: ^4.1.0
+  gallery_saver_plus: ^3.2.8
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
