--- a/syncupc_app/pubspec.yaml
+++ b/syncupc_app/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   qr_flutter: ^4.1.0
   gallery_saver_plus: ^3.2.8
   path_provider: ^2.1.1
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
