--- a/syncupc_app/pubspec.yaml
+++ b/syncupc_app/pubspec.yaml
@@ -20,12 +20,12 @@ dependencies:
   mobile_scanner: ^6.0.10
   image_picker: ^1.1.0
   flutter_localization: ^0.3.2
-  permission_handler: ^10.4.3
+  permission_handler: ^11.3.1
   http: ^1.4.0
   shared_preferences: ^2.5.3
   supabase_flutter: ^2.9.1
   mime: ^2.0.0
-  intl: ^0.19.0
+  intl: 0.20.2
   timeago: ^3.7.1
   qr_flutter: ^4.1.0
   gallery_saver_plus: ^3.2.8
